--- a/ActionCtr/app/src/main/res/layout/activity_human_sensor.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_human_sensor.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4"
+        android:id="@+id/human_sensor_linearLayout_function_button"
         android:orientation="horizontal">
         <LinearLayout
             android:layout_width="0dp"
