--- a/ActionCtr/app/src/main/res/layout/activity_data.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_data.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.action.app.actionctr.DataActivity">
+    tools:context="com.action.app.actionctr2.DataActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
