--- a/ActionCtr/app/src/main/res/layout/activity_debug_data_display.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_debug_data_display.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.action.app.actionctr.DebugDataDisplayActivity">
+    tools:context="com.action.app.actionctr2.DebugDataDisplayActivity">
 
     <ListView
         android:id="@+id/activity_debugdata_listview"
