安装两个app方法： 1.修改build.gradle 中的applicationId 2,修改Manifest中的对应package 3, refactor 文件

--- a/ActionCtr/app/src/main/res/layout/activity_begin.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_begin.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_begin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.action.app.actionctr.BeginActivity">
+    tools:context="com.action.app.actionctr2.BeginActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
