--- a/ActionCtr/app/src/main/res/layout/activity_human_sensor.xml
+++ b/ActionCtr/app/src/main/res/layout/activity_human_sensor.xml
@@ -357,7 +357,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:background="@drawable/common_google_signin_btn_text_light"
-                android:text="上枪防御" />
+                android:text="上枪██"
+                android:textColor="#FF0000"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -472,12 +473,38 @@
                 android:textSize="50sp"
                 android:textStyle="bold" />
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
-            android:orientation="horizontal"></LinearLayout>
+            android:layout_weight="1"
+            android:orientation="horizontal">
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"></LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"></LinearLayout>
+
+            <Button
+                android:id="@+id/human_topgun_defend_or_attack_copy"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/common_google_signin_btn_text_light"
+                android:text="上枪██"
+                android:textColor="#FF0000"
+                android:textSize="50sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
 
 
     </LinearLayout>
